--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,11 +1,13 @@
 name: Daily Hinata Push
 
 on:
-  # 手动触发（方便测试）
   workflow_dispatch:
-  # 定时触发：每天北京时间早上 8 点 (UTC 时间 0 点)
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *' # 北京时间 8:00
+
+# === 关键改动 1：赋予写入权限 ===
+permissions:
+  contents: write
 
 jobs:
   run-bot:
@@ -26,7 +28,16 @@ jobs:
 
     - name: Run bot script
       env:
-        # 这里引用我们在 Secrets 里填的变量
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
         CHAT_ID: ${{ secrets.CHAT_ID }}
       run: python main.py
+
+    # === 关键改动 2：将修改后的 README 提交回仓库 ===
+    - name: Commit and Push changes
+      run: |
+        git config --global user.name 'github-actions[bot]'
+        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+        # 如果 README.md 有变化，才提交
+        git add README.md
+        git diff-index --quiet HEAD || git commit -m "docs: update daily history 📝 [skip ci]"
+        git push
